# shrimple

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SKILL.md  build.rs
.cargo/: config.toml
docs/: Assets.md  Compilation.md  Elements.md  Home.md  Syntax.md
src/: asset.rs  ast.rs  compiler.rs  error.rs  escape_html.rs  evaluator.rs  file_ref.rs  lexer.rs  main.rs  mime.rs  parser.rs  utils.rs  view.rs
tests/: index2.html  main.rs
tests/common/: mod.rs
tests/posts/: 0.html
tests/samples/heading_ids/: index.html
tests/samples/heading_ids/expected-dist/: index.html
tests/samples/hello_world/: index.html
tests/samples/hello_world/expected-dist/: index.html
tests/samples/table/: index.html
tests/samples/table/expected-dist/: index.html
tests/samples/unicode/: index.html
tests/samples/unicode/expected-dist/: index.html
tests/samples/unquoted_attr_value_with_slash/: index.html
tests/samples/unquoted_attr_value_with_slash/expected-dist/: index.html
tests/samples/wrap_in_attr/: index.html
tests/samples/wrap_in_attr/expected-dist/: index.css  index.html
