[package]
name = "shrimple"
version = "0.2.0"
edition = "2021"
description = "Minimal CLI for static site generation, supercharged with Lua"
authors = ["Tim Kurdov <tim.kurdov@gmail.com>"]
repository = "https://github.com/schvv31n/shrimple"
license = "MIT"
keywords = ["template-engine"]
categories = ["template-engine", "compilers", "command-line-interface", "web-programming"]

[dependencies]
shrimple-parser = "0.0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.9", features = ["lua54"] }
ureq = "2.9.6"
shrimple-localhost = "4"
notify = "6.1.1"

[lints.clippy]
unit_arg = "allow"
undocumented_unsafe_blocks = "warn"
deref_by_slicing = "warn"

pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
ignored_unit_patterns = "allow"

nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
