[package]
name = "shrimple"
version = "0.3.1"
edition = "2024"
description = "Minimal CLI for static website generation, supercharged with Lua"
authors = ["Tim Kurdov <tim.kurdov@gmail.com>"]
repository = "https://github.com/its-the-shrimp/shrimple"
license = "MIT"
keywords = ["template-engine"]
categories = ["template-engine", "compilers", "command-line-interface", "web-programming"]

[dependencies]
shrimple-parser = "0.0.5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.9", features = ["lua54"] }
shrimple-localhost = "5"
notify = "6"
reqwest = { version = "0.13", features = ["blocking", "gzip", "deflate", "brotli"] }
tokio = { version = "1", features = ["fs", "rt", "macros"] }
futures-util = { version = "0.3", default-features = false }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

[build-dependencies]
anyhow = "1"

[features]
regen-tests = []

[lints.clippy]
unit_arg = "allow"
undocumented_unsafe_blocks = "warn"
deref_by_slicing = "warn"

pedantic = { level = "warn", priority = -1 }
unnecessary_debug_formatting = "allow"
explicit_deref_methods = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
ignored_unit_patterns = "allow"

nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
